--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -5,14 +5,17 @@ nelmio_api_doc:
             description: This is an awesome app!
             version: 1.0.0
         
-        # components:
-        #     securitySchemes:
-        #         Bearer:
-        #             type: http
-        #             scheme: bearer
-        #             bearerFormat: JWT
-        # security:
-        #     - Bearer: []
+        # 1) Define the security scheme type (HTTP bearer)
+        components:
+            securitySchemes:
+                Bearer:
+                    type: http
+                    scheme: bearer
+                    bearerFormat: JWT
+                    
+        # 2) Apply the security globally to all operations
+        security:
+            - Bearer: []
 
     areas:
         path_patterns: # an array of regexps
